app/crm/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-crm
  labels:
    app: oya-crm
    sap-code: "CRM"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-crm
  template:
    metadata:
      labels:
        app: oya-crm
    spec:
      containers:
        - name: service
          image: registry.example/oya-crm:0.1.0
          ports:
            - name: h3
              containerPort: 8443
